fixed transition issue with css visibility property

--- a/src/components/ImageCard/ImageCard.styles.scss
+++ b/src/components/ImageCard/ImageCard.styles.scss
@@ -18,7 +18,7 @@
     }
 
     .person-btn {
-      visibility: visible;
+      opacity: 1;
     }
   }
 
@@ -114,7 +114,7 @@
     .person-btn {
       display: flex;
       gap: 5px;
-      visibility: hidden;
+      opacity: 0;
 
       .btn-btn {
         flex: 1 1 auto;
